# fx-reserve-rl-optimizer

./: .gitignore  CODEX_TASKS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: streamlit_app.py
configs/: assets.yaml  constraints.yaml  rl_config.yaml
scripts/: generate_sample_data.py
src/: __init__.py
src/agents/: __init__.py  train_ppo.py
src/data/: __init__.py  demo_data.py  download_data.py  features.py  market_data.py
src/envs/: __init__.py  fx_reserve_env.py
src/portfolio/: __init__.py  baselines.py  constraints.py  metrics.py
src/stress/: __init__.py  stress_scenarios.py
tests/: test_baselines.py  test_constraints.py  test_env.py  test_metrics.py
