[project]
name = "fx-reserve-rl-optimizer"
version = "0.1.0"
description = "Stylised FX reserve portfolio optimisation with constrained deep reinforcement learning."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "E402"]
